--- a/WebApplication1 2/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1 2/WebApplication1/WebApplication1.csproj
@@ -193,6 +193,7 @@
       <DependentUpon>About.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
